--- a/index.html
+++ b/index.html
@@ -5420,251 +5420,46 @@ if (btn) {
     if (!tbody) return;
     if (!activityId){ tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Tiada program dipilih.</td></tr>'; return; }
 
-    const q = ($('#sejarahSearch')?.value || '').toLowerCase().trim();
-    tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Memuat data…</td></tr>';
-    try{
-      const qs = new URLSearchParams({ action:'getNadiActivityDetail', id: activityId, id_token: window.ID_TOKEN||'' });
-      const j = await fetchJson(`${window.SCRIPT_URL}?${qs.toString()}`);
-      if (!j || j.status !== 'success') throw new Error((j && (j.message||j.code)) || 'Ralat memuat detail');
-      const rows = (Array.isArray(j.data) ? j.data : [])
-        .filter(r => {
-          if (!q) return true;
-          const blob = `${r.nama||''}|${r.noIC||''}|${r.noTelefon||''}|${r.alamat||''}|${r.status||''}|${r.bp||''}|${r.pr||''}|${r.dxt||''}|${r.bmi||''}|${r.tcaDate||''}|${r.tcaTime||''}|${r.tcaStaff||''}|${r.remark||''}`.toLowerCase();
-          return blob.includes(q);
-        });
+    
+            const q = ($('#sejarahSearch')?.value || '').toLowerCase().trim();
+            // penapisan: cari dalam Nama / IC / Telefon / Alamat / Status (dan lajur lain)
+            const any = (v)=>String(v||'').toLowerCase();
+            const hay = (r)=>`${any(r.nama)}|${any(r.noIC)}|${any(r.noTelefon)}|${any(r.alamat)}|${any(r.status)}|${any(r.bp)}|${any(r.pr)}|${any(r.dxt)}|${any(r.bmi)}|${any(r.tcaDate)}|${any(r.tcaTime)}|${any(r.tcaStaff)}|${any(r.remark)}`;
+            const filtered = state.rows.filter(r => !q || hay(r).includes(q));
 
-      const titleEl = $('#sejarahTitle');
-      if (titleEl){
-        const activeBtn = document.querySelector('#programList .list-group-item.active');
-        titleEl.textContent = activeBtn ? activeBtn.textContent.trim() : 'Sejarah Saringan';
-      }
+            // pemarkahan relevansi untuk autosort
+            function score(r, q){
+              if (!q) return 0;
+              const name = any(r.nama), ic = any(r.noIC), tel = any(r.noTelefon);
+              const addr = any(r.alamat), stat = any(r.status);
+              let s = 0;
+              if (/^\d+$/.test(q)) {
+                if (ic === q) s += 200;
+                if (tel.replace(/^(\+|60)/,'') === q.replace(/^(\+|60)/,'')) s += 180;
+                if (ic.startsWith(q)) s += 120;
+                if (tel.startsWith(q)) s += 100;
+              }
+              if (name === q) s += 160;
+              else if (name.startsWith(q)) s += 140;
+              else if (name.includes(q)) s += 120;
+              if (ic.includes(q)) s += 110;
+              if (tel.includes(q)) s += 105;
+              if (addr.startsWith(q)) s += 90;
+              else if (addr.includes(q)) s += 70;
+              if (stat.startsWith(q)) s += 80;
+              else if (stat.includes(q)) s += 60;
+              const pos = hay(r).indexOf(q);
+              if (pos >= 0) s += Math.max(0, 50 - Math.min(50, pos));
+              return s;
+            }
+            const rows = filtered.slice().sort((a,b)=>{
+              const sa = score(a,q), sb = score(b,q);
+              if (sb !== sa) return sb - sa;
+              const an = any(a.nama), bn = any(b.nama);
+              if (an !== bn) return an.localeCompare(bn);
+              return any(a.noIC).localeCompare(any(b.noIC));
+            });
 
-      tbody.innerHTML = rows.map((r, i)=>`
-        <tr>
-          <td>${i+1}</td>
-          <td>${escapeHtml(r.nama||'')}</td>
-          <td>${escapeHtml(r.noIC||'')}</td>
-          <td>${escapeHtml(r.noTelefon||'')}</td>
-          <td>${escapeHtml(r.alamat||'')}</td>
-          <td>${escapeHtml(r.status||'')}</td>
-          <td>${escapeHtml(r.bp||'')}</td>
-          <td>${escapeHtml(r.pr||'')}</td>
-          <td>${escapeHtml(r.dxt||'')}</td>
-          <td>${escapeHtml(r.bmi||'')}</td>
-          <td>${escapeHtml(r.tcaDate||'')} ${escapeHtml(r.tcaTime||'')}</td>
-          <td>${escapeHtml(r.tcaStaff||'')}</td>
-          <td>${escapeHtml(r.remark||'')}</td>
-        </tr>
-      `).join('') || '<tr><td colspan="13" class="text-center text-muted">Tiada padanan carian.</td></tr>';
-    }catch(e){
-      tbody.innerHTML = `<tr><td colspan="13" class="text-center text-danger">Ralat memuat maklumat: ${escapeHtml(e.message||e)}</td></tr>`;
-    }
-  }
-
-  // Override global (simpanan asal, jika perlu)
-  window._origLoadPrograms = window.loadPrograms;
-  window._origLoadProgramDetail = window.loadProgramDetail;
-  window.loadPrograms = loadPrograms;
-  window.loadProgramDetail = loadProgramDetail;
-
-  // Interaksi
-  document.addEventListener('click', (e)=>{
-    const li = e.target.closest('#programList .list-group-item');
-    if (li){
-      $all('#programList .list-group-item').forEach(b=> b.classList.remove('active'));
-      li.classList.add('active');
-      window.loadProgramDetail(li.getAttribute('data-activity-id'));
-    }
-  });
-  document.addEventListener('input', (e)=>{
-    if (e.target && e.target.id === 'programFilter'){
-      const q = e.target.value.toLowerCase();
-      $all('#programList .list-group-item').forEach(b=>{
-        const meta = (b.getAttribute('data-meta') || b.textContent || '').toLowerCase();
-        b.style.display = meta.includes(q) ? '' : 'none';
-      });
-    }
-    if (e.target && e.target.id === 'sejarahSearch'){
-      const active = document.querySelector('#programList .list-group-item.active') || document.querySelector('#programList .list-group-item');
-      if (active) window.loadProgramDetail(active.getAttribute('data-activity-id'));
-    }
-  });
-
-  // Auto refresh feed
-  let FEED_TIMER = null;
-  let FEED_LATEST = 0;
-  async function pollSejarahFeed(){
-    if (!window.SCRIPT_URL || !window.ID_TOKEN) return;
-    try{
-      const qs = new URLSearchParams({ action:'programFeedSince', since:String(FEED_LATEST||0), limit:'50', id_token: window.ID_TOKEN||'' });
-      const j = await fetchJson(`${window.SCRIPT_URL}?${qs.toString()}`);
-      if (!j || j.status !== 'success') return;
-      const data = Array.isArray(j.data) ? j.data : [];
-      if (!data.length) return;
-      FEED_LATEST = Number(String(j.latest || (data[data.length-1]?.ts || FEED_LATEST)) || FEED_LATEST);
-      const active = document.querySelector('#programList .list-group-item.active');
-      const activeId = active ? active.getAttribute('data-activity-id') : null;
-      let touchActive = false;
-      for (const ev of data){ if (ev && ev.activityId && activeId && ev.activityId === activeId){ touchActive = true; break; } }
-      await window.loadPrograms();
-      if (activeId){
-        const match = document.querySelector(`#programList .list-group-item[data-activity-id="${CSS.escape(activeId)}"]`);
-        if (match){ match.classList.add('active'); }
-        if (touchActive){ window.loadProgramDetail(activeId); }
-      } else {
-        const first = document.querySelector('#programList .list-group-item');
-        if (first){ first.classList.add('active'); window.loadProgramDetail(first.getAttribute('data-activity-id')); }
-      }
-    }catch(e){}
-  }
-  function startSejarahFeed(){ stopSejarahFeed(); FEED_LATEST = Date.now(); FEED_TIMER = setInterval(pollSejarahFeed, 7000); }
-  function stopSejarahFeed(){ if (FEED_TIMER){ clearInterval(FEED_TIMER); FEED_TIMER = null; } }
-
-  function onHashChange(){
-    const onSejarah = location.hash === '#sejarah' || location.hash.startsWith('#sejarah?');
-    if (onSejarah){ window.loadPrograms(); startSejarahFeed(); } else { stopSejarahFeed(); }
-  }
-  window.addEventListener('hashchange', onHashChange);
-  if (document.readyState === 'loading'){ document.addEventListener('DOMContentLoaded', onHashChange); } else { onHashChange(); }
-})();
-</script>
-
-
-<style>
-  .program-list { max-height: 480px; overflow: auto; }
-  .program-list .list-group-item { cursor: pointer; }
-  .program-list .meta { opacity: .8; }
-  .live-dot{ display:inline-block;width:10px;height:10px;border-radius:50%;background:#16a34a;box-shadow:0 0 0 0 rgba(22,163,74,.7);animation:pulse 1.6s infinite; }
-  @keyframes pulse{ 0%{ box-shadow:0 0 0 0 rgba(22,163,74,.6);} 70%{ box-shadow:0 0 0 12px rgba(22,163,74,0);} 100%{ box-shadow:0 0 0 0 rgba(22,163,74,0);} }
-  .sejarah-table-wrap thead.sticky-top{ position: sticky; top: 0; z-index: 5; }
-  .placeholder{ display:inline-block; height: .9rem; background: #e9ecef; border-radius:4px; }
-  .placeholder-glow .placeholder{ animation: placeholder-glow 1.2s ease-in-out infinite; }
-  @keyframes placeholder-glow{ 0%{opacity:.45}50%{opacity:.8}100%{opacity:.45} }
-  /* Hideable cols */
-  .col-alamat.hide, .col-bp.hide, .col-pr.hide, .col-dxt.hide, .col-bmi.hide, .col-tca.hide, .col-staff.hide, .col-remark.hide { display:none; }
-  td.hide { display:none; }
-</style>
-
-<script>
-(function(){
-  const $ = (s, r=document) => r.querySelector(s);
-  const $$ = (s, r=document) => Array.from(r.querySelectorAll(s));
-  const fmt = {
-    esc: s => (s==null?'':String(s)).replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])),
-  };
-  const state = {
-    programs: [],
-    activeId: null,
-    rows: [],
-    lastFeedTs: 0,
-    colVisible: { alamat:true, bp:true, pr:true, dxt:true, bmi:true, tca:true, staff:true, remark:true },
-    sort: 'date_desc'
-  };
-
-  function needAuthWarning(){
-    return !window.SCRIPT_URL || !/^https?:\/\//.test(window.SCRIPT_URL) || !window.ID_TOKEN;
-  }
-
-  // ===== Fetch helpers =====
-  async function jget(params){
-    const qs = new URLSearchParams({ ...(params||{}), id_token: window.ID_TOKEN||'' });
-    const url = `${window.SCRIPT_URL}?${qs.toString()}`;
-    const ctl = new AbortController(); const t = setTimeout(()=>ctl.abort(), 20000);
-    try{
-      const res = await fetch(url, { signal: ctl.signal, credentials:'omit' });
-      return await jsonSafe(res);
-    } finally { clearTimeout(t); }
-  }
-
-  // ===== Programs =====
-  async function loadPrograms(){
-    const list = $('#programList');
-    if (!list) return;
-    if (needAuthWarning()){
-      list.innerHTML = '<div class="p-3 text-center text-warning">Sila log masuk & tetapkan SCRIPT_URL.</div>';
-      return;
-    }
-    list.innerHTML = '<div class="placeholder-glow p-3"><div class="placeholder col-12 mb-2"></div><div class="placeholder col-9 mb-2"></div><div class="placeholder col-7"></div></div>';
-    const j = await jget({ action:'getNadiActivities' }).catch(()=>null);
-    if (!j || j.status!=='success'){
-      list.innerHTML = '<div class="p-3 text-danger">Gagal memuat senarai program.</div>';
-      return;
-    }
-    state.programs = Array.isArray(j.data) ? j.data.slice() : [];
-    renderProgramList();
-  }
-
-  function renderProgramList(){
-    const list = $('#programList'); if (!list) return;
-    const q = ($('#programFilter')?.value || '').toLowerCase().trim();
-    let arr = state.programs.slice();
-    // sort
-    arr.sort((a,b)=>{
-      const aD = (a.programDate||'').split('/').reverse().join('');
-      const bD = (b.programDate||'').split('/').reverse().join('');
-      const tA = (a.title||'').toLowerCase();
-      const tB = (b.title||'').toLowerCase();
-      if (state.sort==='date_desc') return (bD.localeCompare(aD)) || (tA.localeCompare(tB));
-      if (state.sort==='date_asc')  return (aD.localeCompare(bD)) || (tA.localeCompare(tB));
-      if (state.sort==='title_asc') return tA.localeCompare(tB) || (bD.localeCompare(aD));
-      if (state.sort==='title_desc')return tB.localeCompare(tA) || (bD.localeCompare(aD));
-      return 0;
-    });
-    // filter
-    if (q){
-      arr = arr.filter(r => `${r.title||''} ${r.programDate||''}`.toLowerCase().includes(q));
-    }
-    if (!arr.length){
-      list.innerHTML = '<div class="p-3 text-center text-muted">Tiada rekod ditemui.</div>';
-      $('#sejarahTable') && ($('#sejarahTable').innerHTML = '<tr><td colspan="13" class="text-center text-muted">—</td></tr>');
-      return;
-    }
-    list.innerHTML = arr.map(r=>{
-      const aid = fmt.esc(r.activityId||'');
-      const title = fmt.esc(r.title||'-');
-      const date  = fmt.esc(r.programDate||'');
-      const total = fmt.esc(r.total||'0');
-      return `<button type="button" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-                  data-activity-id="${aid}" data-meta="${(title+' '+date).toLowerCase()}">
-                <div>
-                  <div class="fw-semibold">${title}</div>
-                  <div class="meta small"><i class="bi bi-calendar-event me-1"></i>${date}</div>
-                </div>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill">${total}</span>
-              </button>`;
-    }).join('');
-
-    // set active selection
-    let btn = state.activeId && list.querySelector(`.list-group-item[data-activity-id="${CSS.escape(state.activeId)}"]`);
-    if (!btn) btn = list.querySelector('.list-group-item');
-    if (btn){ btn.classList.add('active'); state.activeId = btn.getAttribute('data-activity-id'); }
-    if (state.activeId) loadProgramDetail(state.activeId);
-  }
-
-  // ===== Detail =====
-  async function loadProgramDetail(activityId){
-    state.activeId = activityId;
-    const tbody = $('#sejarahTable'); if (!tbody) return;
-    if (!activityId){ tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted">Tiada program dipilih.</td></tr>'; return; }
-
-    tbody.innerHTML = '<tr><td colspan="13" class="text-center text-muted py-4">Memuat data…</td></tr>';
-    const j = await jget({ action:'getNadiActivityDetail', id: activityId }).catch(()=>null);
-    if (!j || j.status!=='success'){
-      tbody.innerHTML = '<tr><td colspan="13" class="text-center text-danger py-4">Gagal memuat butiran.</td></tr>';
-      return;
-    }
-    state.rows = Array.isArray(j.data) ? j.data.slice() : [];
-    renderDetail();
-  }
-
-  function renderDetail(){
-    const tbody = $('#sejarahTable');
-    const q = ($('#sejarahSearch')?.value || '').toLowerCase().trim();
-    const rows = state.rows.filter(r => {
-      if (!q) return true;
-      const blob = `${r.nama||''}|${r.noIC||''}|${r.noTelefon||''}|${r.alamat||''}|${r.status||''}|${r.bp||''}|${r.pr||''}|${r.dxt||''}|${r.bmi||''}|${r.tcaDate||''}|${r.tcaTime||''}|${r.tcaStaff||''}|${r.remark||''}`.toLowerCase();
-      return blob.includes(q);
-    });
 
     // Summary
     const total = rows.length;
