--- a/index.html
+++ b/index.html
@@ -7398,5 +7398,194 @@ function __toVoucherPayload(payload){
 })();
 </script>
 
+
+<!-- Sejarah search & autosort (stable, ASCII-only) -->
+<script>
+(function(){
+  "use strict";
+
+  // Helper: safe query + debounce
+  function $(sel, root){ return (root||document).querySelector(sel); }
+  function $all(sel, root){ return Array.prototype.slice.call((root||document).querySelectorAll(sel)); }
+  function debounce(fn, wait){
+    var t; return function(){
+      var ctx=this, args=arguments;
+      clearTimeout(t); t=setTimeout(function(){ fn.apply(ctx,args); }, wait||150);
+    };
+  }
+  // Normalize string for loose search (strip accents, casefold, trim)
+  function norm(s){
+    return (s||"").toString()
+      .normalize ? s.normalize("NFD").replace(/[\u0300-\u036f]/g,"").toLowerCase().trim()
+                 : (s||"").toString().toLowerCase().trim();
+  }
+
+  // Guard: run after Sejarah table exists
+  function init(){
+    // Known containers (try a few common ids/classes used in previous versions)
+    var root = document.getElementById("sejarah-section")
+            || document.getElementById("sejarahSaringan")
+            || document.querySelector('[data-section="sejarah"]')
+            || document.body;
+    var table = root.querySelector("table#tblSejarah, table.sejarah-table, table[data-role='sejarah']") || root.querySelector("table");
+    if (!table) return false;
+
+    // If an existing input is present, reuse; else create one (user allowed change of input look)
+    var searchWrap = root.querySelector("#sejarahSearchWrap");
+    var input = root.querySelector("#sejarahSearch")
+             || root.querySelector("input.sejarah-search")
+             || (searchWrap ? searchWrap.querySelector("input") : null);
+
+    if (!input){
+      // Create a non-intrusive bar above the table without breaking layout
+      searchWrap = document.createElement("div");
+      searchWrap.id = "sejarahSearchWrap";
+      searchWrap.style.margin = "8px 0";
+      searchWrap.style.display = "flex";
+      searchWrap.style.gap = "8px";
+      var label = document.createElement("label");
+      label.setAttribute("for","sejarahSearch");
+      label.textContent = "Cari (nama / IC / telefon / alamat / status):";
+      label.style.fontSize = "0.95rem";
+      input = document.createElement("input");
+      input.type = "search";
+      input.id = "sejarahSearch";
+      input.placeholder = "Taip untuk tapis & susun…";
+      input.autocomplete = "off";
+      input.style.flex = "1";
+      input.style.padding = "6px 10px";
+      input.style.border = "1px solid #ddd";
+      input.style.borderRadius = "6px";
+      searchWrap.appendChild(label);
+      searchWrap.appendChild(input);
+      // Insert right before table
+      table.parentNode.insertBefore(searchWrap, table);
+    }
+
+    // Cache original order and a text index for each row
+    var tbody = table.tBodies && table.tBodies[0] ? table.tBodies[0] : table.querySelector("tbody") || table;
+    var rows = $all("tr", tbody).filter(function(tr){
+      // Skip header rows accidentally placed in tbody
+      return !tr.querySelector("th");
+    });
+    // If table has THEAD, prefer that for columns
+    var thead = table.tHead || table.querySelector("thead");
+
+    // Determine which columns to join for search (by header names if available)
+    var searchCols = null;
+    if (thead){
+      var heads = $all("th", thead).map(function(th){ return norm(th.textContent); });
+      // pick columns: nama, ic, telefon, alamat, status if present
+      searchCols = {
+        nama: heads.findIndex(function(t){ return /nama/.test(t); }),
+        ic: heads.findIndex(function(t){ return /(ic|k\/?p)/.test(t); }),
+        tel: heads.findIndex(function(t){ return /(telefon|phone|tel|msisdn)/.test(t); }),
+        alamat: heads.findIndex(function(t){ return /alamat|address|addr/.test(t); }),
+        status: heads.findIndex(function(t){ return /status/.test(t); })
+      };
+    }
+
+    // Build index
+    var meta = rows.map(function(tr, i){
+      var cells = $all("td", tr);
+      function pick(idx){
+        if (idx == null || idx < 0 || idx >= cells.length) return "";
+        return norm(cells[idx].textContent || "");
+      }
+      var joined;
+      if (searchCols){
+        joined = [
+          pick(searchCols.nama),
+          pick(searchCols.ic),
+          pick(searchCols.tel),
+          pick(searchCols.alamat),
+          pick(searchCols.status),
+          norm(tr.textContent || "")
+        ].join(" | ");
+      } else {
+        joined = norm(tr.textContent || "");
+      }
+      return {
+        tr: tr,
+        originalIndex: i,
+        indexText: joined
+      };
+    });
+
+    function scoreRow(text, q){
+      if (!q) return 0;
+      var s = 0;
+      // exact ic or phone match: +100
+      if (/\b\d{6,}\b/.test(q)){
+        if (new RegExp("\\b"+q.replace(/[.*+?^${}()|[\]\\]/g,"\\$&")+"\\b").test(text)) s += 100;
+      }
+      // starts with on name: +40
+      var m = /^([^\|]+)/.exec(text); // the first part usually Nama
+      if (m && m[1].indexOf(q) === 0) s += 40;
+      // substring anywhere
+      if (text.indexOf(q) >= 0) s += 10;
+      return s;
+    }
+
+    function apply(q){
+      var query = norm(q);
+      if (!query){
+        // restore original order and show all
+        meta.forEach(function(m){ m.tr.style.display = ""; });
+        meta.sort(function(a,b){ return a.originalIndex - b.originalIndex; });
+      } else {
+        // filter + score
+        meta.forEach(function(m){
+          var sc = scoreRow(m.indexText, query);
+          m._score = sc;
+          m.tr.style.display = sc > 0 ? "" : "none";
+        });
+        // sort by score desc, then by original index
+        meta.sort(function(a,b){
+          var d = (b._score||0) - (a._score||0);
+          return d !== 0 ? d : (a.originalIndex - b.originalIndex);
+        });
+      }
+      // reorder DOM according to meta order while keeping only visible
+      var frag = document.createDocumentFragment();
+      meta.forEach(function(m){
+        if (m.tr.style.display !== "none") frag.appendChild(m.tr);
+      });
+      tbody.appendChild(frag);
+
+      // re-number "No." column if exists (first column containing only digits)
+      $all("tr", tbody).forEach(function(tr, idx){
+        var td = tr.querySelector("td");
+        if (!td) return;
+        var txt = (td.textContent || "").trim();
+        if (/^\d+$/.test(txt)) td.textContent = String(idx+1);
+      });
+    }
+
+    input.addEventListener("input", debounce(function(e){ apply(this.value); }, 120));
+    // expose minimal API for debug
+    window.__SEJARAH_SEARCH__ = { apply: apply };
+    return true;
+  }
+
+  // Wait until DOM ready and after data render (in case table is filled async)
+  function ready(fn){
+    if (document.readyState === "complete" || document.readyState === "interactive") { setTimeout(fn,0); }
+    else { document.addEventListener("DOMContentLoaded", fn); }
+  }
+  ready(function(){
+    var ok = init();
+    if (!ok){
+      // Try a few times for SPA-style rendering
+      var tries = 40, timer = setInterval(function(){
+        if (init()){ clearInterval(timer); }
+        if (--tries <= 0) clearInterval(timer);
+      }, 250);
+    }
+  });
+})();
+</script>
+<!-- END sejarah-search -->
+
 </body>
 </html>
